--- a/package/bb_apps/pubspec.yaml
+++ b/package/bb_apps/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   firebase_core: ^1.2.0
   firebase_database: ^7.0.0
   cloud_firestore: ^2.2.0
-  url_launcher: ^6.0.4
+  # url_launcher: ^6.0.4
   http: ^0.13.3
   app_launcher: ^1.0.0
   device_apps: ^2.1.0
