--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
     path: package/bb_apps
   # bb_apps:
   #   git:
-  #     url: https://github.com/aman-kumar-bbi/bb_apps_package.git
-  #     path: bb_apps
+  #     url: https://github.com/aman-kumar-bbi/bb_apps.git
+  #     path: package/bb_apps
   firebase_core: ^1.2.0
 
 
