--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  bb_apps:
-    path: package/bb_apps
   # bb_apps:
-  #   git:
-  #     url: https://github.com/aman-kumar-bbi/bb_apps.git
-  #     path: package/bb_apps
+  #   path: package/bb_apps
+  bb_apps:
+    git:
+      url: https://github.com/aman-kumar-bbi/bb_apps.git
+      path: package/bb_apps
   firebase_core: ^1.2.0
 
 
